--- a/environment.yml
+++ b/environment.yml
@@ -1,181 +1,139 @@
-name: hail
+name: gwas
 channels:
-  - anaconda
+  - salilab
   - conda-forge
   - bioconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - aiohttp=3.6.2=py37h516909a_0
+  - _openmp_mutex=4.5=2_gnu
+  - abseil-cpp=20211102.0=h27087fc_1
+  - aiohttp=3.8.1=py37h540881e_1
   - aiohttp-session=2.7.0=py_0
-  - argon2-cffi=20.1.0=py37h8f50634_1
-  - async-timeout=3.0.1=py_1000
-  - async_generator=1.10=py_0
-  - attrs=20.2.0=pyh9f0ad1d_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.1=py_0
-  - bleach=3.1.5=pyh9f0ad1d_0
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - asyncinit=0.2.4=pyhd8ed1ab_0
+  - asynctest=0.13.0=py_0
+  - attrs=21.4.0=pyhd8ed1ab_0
   - blinker=1.4=py_1
   - bokeh=1.2.0=py37_0
-  - brotlipy=0.7.0=py37h8f50634_1000
-  - ca-certificates=2020.6.20=hecda079_0
-  - cachetools=4.1.1=py_0
-  - certifi=2020.6.20=py37hc8dfbb8_0
-  - cffi=1.14.1=py37h2b28604_0
-  - chardet=3.0.4=py37hc8dfbb8_1006
-  - click=7.1.2=pyh9f0ad1d_0
-  - cryptography=3.1=py37hb09aad4_0
-  - dbus=1.13.6=he372182_0
+  - bottleneck=1.3.4=py37hda87dfa_1
+  - brotlipy=0.7.0=py37h540881e_1004
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2022.6.15=ha878542_0
+  - cachetools=5.0.0=pyhd8ed1ab_0
+  - certifi=2022.6.15=py37h89c1867_0
+  - cffi=1.15.0=py37h036bc23_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - click=8.1.3=py37h89c1867_0
+  - cryptography=37.0.1=py37h9ce1e76_0
   - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py37hc8dfbb8_1001
-  - expat=2.2.9=he1b5a44_2
-  - fontconfig=2.13.1=h1056068_1002
-  - freetype=2.10.2=he06d7ca_0
-  - gcsfs=0.2.1=py_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.66.0=h0dae87d_0
-  - google-auth=1.21.1=py_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
-  - hail=0.2.33=py37hc9558a2_0
-  - humanize=2.6.0=py_0
+  - deprecated=1.2.13=pyh6c4a22f_0
+  - dill=0.3.5.1=pyhd8ed1ab_0
+  - freetype=2.10.4=h0708190_1
+  - frozenlist=1.3.0=py37h540881e_1
+  - fsspec=2022.5.0=pyhd8ed1ab_0
+  - gcsfs=2022.5.0=pyhd8ed1ab_0
+  - giflib=5.2.1=h36c2ea0_2
+  - google-api-core=2.8.2=pyhd8ed1ab_0
+  - google-auth=2.8.0=pyh6c4a22f_0
+  - google-auth-oauthlib=0.5.2=pyhd8ed1ab_0
+  - google-cloud-core=2.3.1=pyhd8ed1ab_0
+  - google-cloud-sdk=390.0.0=py37h89c1867_0
+  - google-cloud-storage=2.4.0=pyh6c4a22f_0
+  - google-crc32c=1.1.2=py37h5d4fa31_3
+  - google-resumable-media=2.3.3=pyhd8ed1ab_0
+  - googleapis-common-protos=1.56.2=py37h89c1867_0
+  - grpc-cpp=1.46.3=h0b91f02_1
+  - grpcio=1.46.3=py37h632d5b4_1
+  - hail=0.2.61=py37h9a982cc_1
+  - humanize=4.2.0=pyhd8ed1ab_0
   - hurry.filesize=0.9=pyh8c360ce_0
-  - icu=67.1=he1b5a44_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=1.7.0=py37hc8dfbb8_0
-  - importlib_metadata=1.7.0=0
-  - ipykernel=5.3.4=py37h43977f1_0
-  - ipython=7.18.1=py37hc6149b9_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=pyh9f0ad1d_1
-  - jedi=0.15.2=py37_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9d=h516909a_0
-  - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter=1.0.0=py_2
-  - jupyter_client=6.1.7=py_0
-  - jupyter_console=6.2.0=py_0
-  - jupyter_core=4.6.3=py37hc8dfbb8_1
-  - jupyterlab_pygments=0.1.1=pyh9f0ad1d_0
-  - krb5=1.17.1=hfafb76e_3
-  - lcms2=2.11=hbd6801e_0
-  - ld_impl_linux-64=2.35=h769bd43_9
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libclang=10.0.1=default_hde54327_1
-  - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=hcdb4288_2
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.3.0=h24d8f2e_16
-  - libgfortran-ng=7.5.0=hdf63c60_16
-  - libgomp=9.3.0=h24d8f2e_16
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.8.0=17_openblas
-  - libllvm10=10.0.1=he513fc3_3
-  - libopenblas=0.3.10=pthreads_hb3c22a3_4
-  - libpng=1.6.37=hed695b0_2
-  - libpq=12.3=h5513abc_0
-  - libsodium=1.0.18=h516909a_0
-  - libstdcxx-ng=9.3.0=hdf63c60_16
-  - libtiff=4.1.0=hc7e4089_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h516909a_3
-  - libxcb=1.13=h14c3975_1002
-  - libxkbcommon=0.10.0=he1b5a44_0
-  - libxml2=2.9.10=h68273f3_2
-  - lz4-c=1.9.2=he1b5a44_3
-  - markupsafe=1.1.1=py37h8f50634_1
-  - mistune=0.8.4=py37h8f50634_1001
-  - multidict=4.7.5=py37h8f50634_1
-  - mysql-common=8.0.21=2
-  - mysql-libs=8.0.21=hf3661c5_2
-  - nbclient=0.5.0=py_0
-  - nbconvert=6.0.2=py37hc8dfbb8_0
-  - nbformat=5.0.7=py_0
-  - ncurses=6.2=he1b5a44_1
-  - nest-asyncio=1.4.0=py_0
-  - notebook=6.1.4=py37hc8dfbb8_0
-  - nspr=4.28=he1b5a44_0
-  - nss=3.56=he751ad9_0
-  - numpy=1.19.1=py37h7ea13bd_2
-  - oauthlib=3.0.1=py_0
-  - olefile=0.46=py_0
-  - openjdk=8.0.152=h7b6447c_3
-  - openssl=1.1.1g=h516909a_1
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandas=1.1.2=py37h3340039_0
-  - pandoc=2.10.1=h516909a_0
-  - pandocfilters=1.4.2=py_1
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py37h89c1867_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9e=h166bdaf_1
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=15_linux64_openblas
+  - libcblas=3.9.0=15_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libdeflate=1.12=h166bdaf_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=12.1.0=h8d9b700_16
+  - libgfortran-ng=12.1.0=h69a702a_16
+  - libgfortran5=12.1.0=hdcd56e2_16
+  - libgomp=12.1.0=h8d9b700_16
+  - liblapack=3.9.0=15_linux64_openblas
+  - libnsl=2.0.0=h7f98852_0
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libpng=1.6.37=h21135ba_2
+  - libprotobuf=3.20.1=h6239696_0
+  - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libtiff=4.4.0=hc85c160_1
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libzlib=1.2.12=h166bdaf_1
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markupsafe=2.1.1=py37h540881e_1
+  - multidict=6.0.2=py37h540881e_1
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - nomkl=1.0=h5ca1d4c_0
+  - numexpr=2.8.0=py37h85a3170_102
+  - numpy=1.21.6=py37h976b520_0
+  - oauthlib=3.2.0=pyhd8ed1ab_0
+  - openjdk=8.0.332=h166bdaf_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=3.0.3=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.3.5=py37h8c16a72_0
   - parsimonious=0.8.1=py_0
-  - parso=0.5.2=py_0
-  - pcre=8.44=he1b5a44_0
-  - pexpect=4.8.0=py37hc8dfbb8_1
-  - pickleshare=0.7.5=py37hc8dfbb8_1001
-  - pillow=7.2.0=py37h718be6c_1
-  - pip=20.2.3=py_0
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.7=py_0
-  - prompt_toolkit=3.0.7=0
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
+  - pillow=9.1.1=py37h44f0d7a_1
+  - pip=22.1.2=pyhd8ed1ab_0
+  - protobuf=3.20.1=py37hd23a5d3_0
+  - pthread-stubs=0.4=h36c2ea0_1001
   - py4j=0.10.7=py_1
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.7.0=py_0
-  - pyjwt=1.7.1=py_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py37h8685d9f_3
-  - pyrsistent=0.17.3=py37h8f50634_0
-  - pysocks=1.7.1=py37hc8dfbb8_1
-  - pyspark=2.4.6=py_0
-  - python=3.7.8=h6f2ec95_1_cpython
-  - python-dateutil=2.8.1=py_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyjwt=2.4.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pysocks=1.7.1=py37h89c1867_5
+  - pyspark=2.4.1=py_0
+  - python=3.7.12=hf930737_100_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-json-logger=0.1.11=py_0
-  - python_abi=3.7=1_cp37m
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyyaml=5.3.1=py37h8f50634_0
-  - pyzmq=19.0.2=py37hac76be4_0
-  - qt=5.12.9=h1f2b2cb_0
-  - qtconsole=4.7.7=pyh9f0ad1d_0
-  - qtpy=1.9.0=py_0
-  - readline=8.0=he28a2e2_2
-  - requests=2.24.0=pyh9f0ad1d_0
-  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
-  - rsa=4.6=pyh9f0ad1d_0
-  - scipy=1.5.2=py37hb14ef9d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=49.6.0=py37hc8dfbb8_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.33.0=h4cf870e_0
+  - python_abi=3.7=2_cp37m
+  - pytz=2022.1=pyhd8ed1ab_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py37h540881e_4
+  - re2=2022.04.01=h27087fc_0
+  - readline=8.1.2=h0f457ee_0
+  - requests=2.28.0=pyhd8ed1ab_0
+  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
+  - rsa=4.8=pyhd8ed1ab_0
+  - scipy=1.7.3=py37hf2a6cf1_0
+  - setuptools=62.6.0=py37h89c1867_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.38.5=h4ff8645_0
   - tabulate=0.8.3=py_0
-  - terminado=0.8.3=py37hc8dfbb8_1
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hed695b0_0
-  - tornado=6.0.4=py37h8f50634_1
+  - tk=8.6.12=h27826a3_0
+  - tornado=6.1=py37h540881e_3
   - tqdm=4.42.1=py_0
-  - traitlets=5.0.4=py_0
-  - urllib3=1.25.10=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - widgetsnbextension=3.5.1=py37hc8dfbb8_1
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
+  - typing-extensions=4.2.0=hd8ed1ab_1
+  - typing_extensions=4.2.0=pyha770c72_1
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - wrapt=1.14.1=py37h540881e_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - yarl=1.3.0=py37h516909a_1000
-  - zeromq=4.3.2=he1b5a44_3
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1009
-  - zstd=1.4.5=h6597ccf_2
-  - pip:
-    - pyqt5-sip==4.19.18
-    - pyqtchart==5.12
-    - pyqtwebengine==5.12.1
-
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.7.2=py37h540881e_2
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.12=h166bdaf_1
+  - zstd=1.5.2=h8a70e8d_1
