--- a/environment.yml
+++ b/environment.yml
@@ -30,6 +30,7 @@ dependencies:
   - decorator=4.4.2=py_0
   - deprecated=1.2.13=pyh6c4a22f_0
   - dill=0.3.5.1=pyhd8ed1ab_0
+  - flask=2.0.3=pyhd3eb1b0_0
   - freetype=2.10.4=h0708190_1
   - frozenlist=1.3.0=py37h540881e_1
   - fsspec=2022.5.0=pyhd8ed1ab_0
@@ -51,7 +52,8 @@ dependencies:
   - hurry.filesize=0.9=pyh8c360ce_0
   - idna=3.3=pyhd8ed1ab_0
   - importlib-metadata=4.11.4=py37h89c1867_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
+  - itsdangerous=2.1.2=pyhd8ed1ab_0
+  - jinja2=3.1.1=pyhd8ed1ab_0
   - jpeg=9e=h166bdaf_1
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
@@ -127,6 +129,7 @@ dependencies:
   - typing-extensions=4.2.0=hd8ed1ab_1
   - typing_extensions=4.2.0=pyha770c72_1
   - urllib3=1.26.9=pyhd8ed1ab_0
+  - werkzeug=2.1.2=pyhd8ed1ab_1
   - wheel=0.37.1=pyhd8ed1ab_0
   - wrapt=1.14.1=py37h540881e_0
   - xorg-libxau=1.0.9=h7f98852_0
